# DRF-course-habits

./: .env_example  Dockerfile  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  tests.py
users/migrations/: 0001_initial.py
