[tool.poetry]
name = "drf-course"
version = "0.1.0"
description = ""
authors = ["Denis Antropov <de94onisus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
requests = "^2.32.3"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
redis = "^5.0.5"
django-cors-headers = "^4.3.1"
eventlet = "^0.36.1"


[tool.poetry.group.tests.dependencies]
coverage = "^7.5.3"


[tool.poetry.group.linters.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.4.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119
